# Merger-retrospective-studies

./: .gitignore  LICENCE  README.md  README_prediccionvobservado.md  main.py  objective_projected_gradient_norm.txt  projected_gradient_norm.txt  pyproject.toml  requirements.txt  setup.py  test_histogram_function.py
brands_by_company/: cigarettes.json
estimaciones/: plain_logit.py  rcl_with_demographics.py  rcl_without_demographics.py
merger_retrospective_studies/: extraer_zip.ipynb  main.py
merger_retrospective_studies/estimaciones/: estimaciones_utils.py  optimal_instruments.py  plain_logit.py  post_estimation.py  post_estimation_merger_simulation.py  pruebas.ipynb  rcl_with_demographics.py  rcl_without_demographics.py  utils.py
merger_retrospective_studies/nielsen_data_cleaning/: caracteristicas_productos.py  consumidores_sociodemograficas.py  descarga_merge.py  empresas.py  filtrar_mercados.py  instrumentos.py  main.py  not_main.py  precios_ingresos_participaciones.py  product_data_creation.py  pruebas.ipynb  utils.py
merger_retrospective_studies/prediccion_vs_observado/: comparacion_desc_stats.py  datos_comparacion.py  filter_observed_prices_based_prediction.py  observed_prices_extraction.py  predicted_plus_observed.py  predicted_prices_df.py  prediction_observation_comparison.py  prueba.ipynb
nielsen_data_cleaning/: __init__.py  caracteristicas_productos.py  consumidores_sociodemograficas.py  descarga_merge.py  empresas.py  filtrar_mercados.py  instrumentos.py  main.py  precios_ingresos_participaciones.py
(+15 files in other folders)
