[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "merger-retrospective-studies"
version = "0.1.8"
description = "A package for cleaning and processing Nielsen data"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
]

[tool.setuptools.packages.find]
include = ["merger_retrospective_studies*"]
